--- a/WindowsEventLogMonitor/WindowsEventLogMonitor.csproj
+++ b/WindowsEventLogMonitor/WindowsEventLogMonitor.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+    <ItemGroup>
+	    <None Update="config.json">
+		    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	    </None>
+    </ItemGroup>
+
 </Project>
