新增 SQL Server 登录审计配置脚本和监控解决方案文档
- 创建 `Enable-SQLServerAudit.ps1` 脚本，用于配置 SQL Server 登录成功和失败的审计功能。
- 添加 `SQL_Server_Audit_Solution.md` 文档，详细说明解决方案的概述、使用方法和故障排除步骤。
- 新增 UI 使用说明文档，提供 SQL Server 日志监控器的界面概览和使用指南。
- 更新配置管理和服务安装脚本，支持 SQL Server 日志监控服务的安装和卸载。
- 优化日志推送功能，支持重试机制和错误处理。

--- a/WindowsEventLogMonitor/config.json
+++ b/WindowsEventLogMonitor/config.json
@@ -1,3 +1,30 @@
 {
-  "ApiUrl": "http://localhost:5000/api/aa/WindowsEventMonitor/SaveEventLog"
+  "ApiUrl": "http://localhost:5000/api/aa/WindowsEventMonitor/SaveEventLog",
+  "SqlServerMonitoring": {
+    "Enabled": true,
+    "MonitorIntervalSeconds": 30,
+    "BatchSize": 10,
+    "IncludeMSSQLSERVER": true,
+    "IncludeWindowsAuth": true,
+    "EventIds": {
+      "SQLLoginSuccess": 18453,
+      "SQLLoginFailure": 18456,
+      "WindowsLoginSuccess": 4624,
+      "WindowsLoginFailure": 4625
+    }
+  },
+  "RetryPolicy": {
+    "MaxRetries": 3,
+    "RetryDelaySeconds": 5,
+    "EnableRetry": true
+  },
+  "LogRetention": {
+    "RetentionDays": 7,
+    "MaxLogFileSizeKB": 500
+  },
+  "Security": {
+    "UseHttps": false,
+    "ApiKey": "",
+    "TimeoutSeconds": 30
+  }
 }
