--- a/WindowsEventLogMonitor/config.json
+++ b/WindowsEventLogMonitor/config.json
@@ -1,9 +1,10 @@
 {
-  "ApiUrl": "http://localhost:5000/api/aa/WindowsEventMonitor/SaveEventLog",
+  "ApiUrl": "http://172.16.32.160:55000/api/aa/WindowsEventMonitor/SaveEventLog",
   "SqlServerMonitoring": {
     "Enabled": true,
     "MonitorIntervalSeconds": 30,
-    "BatchSize": 10,
+    "UIRefreshIntervalSeconds": 15,
+    "BatchSize": 5,
     "IncludeMSSQLSERVER": true,
     "IncludeWindowsAuth": true,
     "EventIds": {
@@ -14,8 +15,8 @@
     }
   },
   "RetryPolicy": {
-    "MaxRetries": 3,
-    "RetryDelaySeconds": 5,
+    "MaxRetries": 5,
+    "RetryDelaySeconds": 10,
     "EnableRetry": true
   },
   "LogRetention": {
@@ -25,6 +26,6 @@
   "Security": {
     "UseHttps": false,
     "ApiKey": "",
-    "TimeoutSeconds": 30
+    "TimeoutSeconds": 60
   }
 }
